tests/fixtures/valid/tree.bop
message TreeNode {
    value(1): int32;
    children(2): TreeNode[];
}