tests/fixtures/should_fail/nested_union.bop
union A {
  B(1): union {
    Cx(1): mut { x: int32; }
  }
}
